Added voting-app link to profile dropdown

--- a/src/localization/de/app.json
+++ b/src/localization/de/app.json
@@ -6,7 +6,8 @@
     "logins": "Meine Logins",
     "privacy-policy": "Datenschutz-Bestimmungen",
     "support": "Support",
-    "sign-out": "Abmelden"
+    "sign-out": "Abmelden",
+    "voting-app": "Vote app"
   },
   "search": {
     "input-placeholder": "Suchen",
