--- a/src/localization/en/app.json
+++ b/src/localization/en/app.json
@@ -6,7 +6,8 @@
     "logins": "My Logins",
     "privacy-policy": "Privacy Policy",
     "support": "Support",
-    "sign-out": "Sign Out"
+    "sign-out": "Sign Out",
+    "voting-app": "Voting app"
   },
   "search": {
     "input-placeholder": "Search",
