--- a/src/localization/es/app.json
+++ b/src/localization/es/app.json
@@ -6,7 +6,8 @@
     "logins": "Mis cuentas",
     "privacy-policy": "Política de privacidad",
     "support": "Apoyo",
-    "sign-out": "Cerrar sesión"
+    "sign-out": "Cerrar sesión",
+    "voting-app": "Vote app"
   },
   "search": {
     "input-placeholder": "Buscar",
