--- a/src/localization/fi/app.json
+++ b/src/localization/fi/app.json
@@ -6,7 +6,8 @@
     "logins": "Mine brukekontoer",
     "privacy-policy": "Personvernerklæring",
     "support": "Support",
-    "sign-out": "Kirjaudu ulos"
+    "sign-out": "Kirjaudu ulos",
+    "voting-app": "Vote app"
   },
   "search": {
     "input-placeholder": "Etsi",
