--- a/src/localization/fr/app.json
+++ b/src/localization/fr/app.json
@@ -6,7 +6,8 @@
     "logins": "Mes identifiants",
     "privacy-policy": "Politique de confidentialité",
     "support": "Support",
-    "sign-out": "Déconnexion"
+    "sign-out": "Déconnexion",
+    "voting-app": "Vote app"
   },
   "search": {
     "input-placeholder": "Rechercher",
