--- a/src/localization/nl/app.json
+++ b/src/localization/nl/app.json
@@ -6,7 +6,8 @@
     "logins": "Mijn logins",
     "privacy-policy": "Privacybeleid",
     "support": "Support",
-    "sign-out": "Afmelden"
+    "sign-out": "Afmelden",
+    "voting-app": "Vote app"
   },
   "search": {
     "input-placeholder": "Zoeken",
