--- a/src/localization/no/app.json
+++ b/src/localization/no/app.json
@@ -6,7 +6,8 @@
     "logins": "Mine brukekontoer",
     "privacy-policy": "Personvernerklæring",
     "support": "Brukerstøtte",
-    "sign-out": "Logg ut"
+    "sign-out": "Logg ut",
+    "voting-app": "Votering app"
   },
   "search": {
     "input-placeholder": "Søk",
